exports[`test flow/removes_types_used_in_value_only.js 1`] = `
"

foo();"
`;

exports[`test flow/removes_values_used_as_types_only.js 1`] = `
"

function bar(): foo {}"
`;

exports[`test simple/one-used-one-unused.js 1`] = `
"const foo = require('foo');


foo();"
`;

exports[`test simple/will-be-empty.js 1`] = `""`;
